# refex

./: .gitignore  README.md  compare.py  pyproject.toml
pdfs/: expected-references.jsonl  expected-refs.csv
refex/: __init__.py  __main__.py  cli.py  extractor.py  parser.py  repairer.py
scripts/: compare.py
tests/: test_cli.py  test_extractor.py  test_parser.py  test_repairer.py
